refactor: 쿠키 관련 코드 추가 #46